--- a/4.3 ClienteFTP/nbproject/project.properties
+++ b/4.3 ClienteFTP/nbproject/project.properties
@@ -1,6 +1,5 @@
-#Fri Dec 13 10:05:15 CET 2019
+#Wed Jan 08 10:55:16 CET 2020
 excludes=
-file.reference.commons-net-3.0.1.jar=libraries\\commons-net-3.0.1.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -18,6 +17,7 @@ source.encoding=UTF-8
 javadoc.author=false
 test.src.dir=test
 build.dir=build
+file.reference.commons-net-3.0.1.jar=libraries\\commons-net-3.0.1.jar
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
@@ -30,30 +30,24 @@ debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 annotation.processing.processor.options=
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.6
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-javac.classpath=\
-    ${file.reference.commons-net-3.0.1.jar}
 annotation.processing.enabled.in.editor=false
+javac.classpath=${file.reference.commons-net-3.0.1.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
