--- a/4.5 ClienteSMTP/nbproject/project.properties
+++ b/4.5 ClienteSMTP/nbproject/project.properties
@@ -19,38 +19,46 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/ClienteSMTP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mail.jar=/media/Datos/ramon/IES Al-Andalus/asignaturas ciclos/Prog_Servicios/Temas revisados/Tema 5 revisado/libreriasExternas/correo/javamail-14-7nueva/javamail-1.4.7/mail.jar
-file.reference.mail.jar-1=/media/Datos/ramon/IES Al-Andalus/ASIGNATURAS/Prog_Servicios/Temas revisados/Tema 5 revisado/libreriasExternas/correo/javamail-14-7nueva/javamail-1.4.7/mail.jar
+file.reference.javax.mail.jar=libraries/javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mail.jar-1}
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -59,6 +67,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=ClienteSMTP
 main.class=clientesmtp.EnviarCorreoSSL
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -71,9 +81,13 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
