--- a/3.6 ClientURL/nbproject/project.properties
+++ b/3.6 ClientURL/nbproject/project.properties
@@ -1,14 +1,24 @@
 annotation.processing.processors.list=
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 #Fri Dec 13 09:48:28 CET 2019
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
+javac.test.modulepath=\
+    ${javac.modulepath}
 mkdist.disabled=false
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 javadoc.nonavbar=false
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
@@ -20,6 +30,8 @@ javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
 build.classes.dir=${build.dir}/classes
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 javadoc.author=false
 test.src.dir=test
