--- a/5.4 TiempoTransmisionURL/nbproject/private/private.properties
+++ b/5.4 TiempoTransmisionURL/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/ramon/.netbeans/7.3.1/build.properties
+user.properties.file=C:\\Users\\jmfdiaz\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
