--- a/3.6 ClientURL/nbproject/project.properties
+++ b/3.6 ClientURL/nbproject/project.properties
@@ -12,6 +12,9 @@ javac.modulepath=
 javac.processormodulepath=
 javac.test.modulepath=\
     ${javac.modulepath}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=ClientURL
 mkdist.disabled=false
 run.classpath=\
     ${javac.classpath}:\
@@ -25,7 +28,7 @@ run.test.classpath=\
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 javac.processorpath=\
     ${javac.classpath}
-javac.target=1.6
+javac.target=1.8
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -49,7 +52,7 @@ dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
-javac.source=1.6
+javac.source=1.8
 application.vendor=za
 junit.selected.version=4
 debug.classpath=${run.classpath}
