--- a/4.3 ClienteFTP/nbproject/project.properties
+++ b/4.3 ClienteFTP/nbproject/project.properties
@@ -1,23 +1,36 @@
+application.title=ClienteFTP
+application.vendor=jmfdiaz
 debug.modulepath=\
     ${run.modulepath}
 debug.test.modulepath=\
     ${run.test.modulepath}
+endorsed.classpath=
 #Wed Jan 08 10:55:16 CET 2020
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.test.modulepath=\
     ${javac.modulepath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=ClienteFTP
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 run.modulepath=\
     ${javac.modulepath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
-javac.target=1.6
+javac.processorpath=\
+    ${javac.classpath}
+javac.target=1.8
 annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
@@ -41,14 +54,17 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-annotation.processing.processor.options=
 javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
-javac.source=1.6
+javac.source=1.8
 junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 jar.compress=false
 build.generated.dir=${build.dir}/generated
 javadoc.private=false
@@ -59,7 +75,8 @@ manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 annotation.processing.enabled.in.editor=false
-javac.classpath=${file.reference.commons-net-3.0.1.jar}
+javac.classpath=\
+    ${file.reference.commons-net-3.0.1.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
